--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
 	<div id="page-wrap">
 		<div id="contact-info" class="vcard">
-			<h1 class="fn">Atahan Yorgancı</h1>
+			<h1 class="fn">Kaan Tuna Erkman</h1>
 			<p>
-				Cell: <span class="tel">+90 (505) 670 4480</span><br>
-				Email: <a class="email" href="atahanyorganci@hotmail.com">atahanyorganci@hotmail.com</a><br>
-				GitHub: <a href="http://gitlab.com/atomicle?nav_source=navbar">http://gitlab.com/atomicle?nav_source=navbar</a>
+				Cell: <span class="tel">+90 (531) 733 8840</span><br>
+				Email: <a class="email" href="kaantunaerkman@gmail.com">kaantunaerkman@gmail.com</a><br>
+				GitHub: <a href="https://github.com/tunaerkman">https://github.com/tunaerkman</a>
 			</p>
 		</div>
 		<div id="objective">
@@ -31,10 +31,10 @@
 			<dd>
 				<h2>2017 – Present Bilkent University, Ankara Turkey</h2>
 				<p>
-					Bachelor in Electrical and Electronic Engineering.<br>
+					Bachelor in Industrial Engineering.<br>
 					<strong>CGPA:</strong> 3.19 / 4.00
 				</p>
-				<h2>2013 – 2017 TED Ankara Collage High School, Ankara Turkey, Academic Science Program</h2>
+				<h2>2013 – 2017 Tevfik Fikret High School, Ankara Turkey</h2>
 				<p>
 					Awarded merit scholarship for high achievement (first percentile) in high school entrance exam.
 				</p>
