--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Atahan's CV</title>
+	<title>Tuna's CV</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 
@@ -32,7 +32,7 @@
 				<h2>2017 – Present Bilkent University, Ankara Turkey</h2>
 				<p>
 					Bachelor in Industrial Engineering.<br>
-					<strong>CGPA:</strong> 3.19 / 4.00
+					#<strong>CGPA:</strong> 3.19 / 4.00
 				</p>
 				<h2>2013 – 2017 Tevfik Fikret High School, Ankara Turkey</h2>
 				<p>
