--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 		</div>
 		<div id="objective">
 			<p>
-				Technology enthusiast with particular interests in digital electronics and programming, novice chess player, metal
-				concert attender.
+				Technology enthusiast with particular interests in programming and databases, novice chess player, history reader and sports fan.
 			</p>
 		</div>
 		<div class="clear"></div>
