--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				</h2>
 				<p>
 					2 weeks of working experience in the department of Guest relations in an hotel
-					named AquaFantasy in Kuşadası/Aydın-Türkiye.
+					named AquaFantasy in Kuşadası/Aydın-Turkey.
 				</p>
 				<h2>
 					2017 Science Award Waterloo University Chemistry Department, Waterloo Canada
