--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				</ul>
 				<h2>Sports</h2>
 				<p>
-					Licenced basketball player in the high school
+					Licenced basketball player in the high school.
 				</p>
 			</dd>
 			<dd class="clear"></dd>
